# aux-ducklake

./: .dockerignore  .gitignore  AGENTS.md  BENCHMARK.md  Cargo.toml  LICENSE  README.md  USAGE.md  justfile  rustfmt.toml
crates/ducklake-catalog/: Cargo.toml  build.rs
crates/ducklake-catalog/src/: append_commits.rs  bounded_cache.rs  change_keys.rs  column_mappings.rs  column_mappings_tests.rs  compaction_store.rs  compaction_store_tests.rs  conflict.rs  conflict_tests.rs  conflict_watermarks.rs  conflict_watermarks_tests.rs  data_file_changes.rs  data_file_store.rs  data_file_store_tests.rs  data_mutation_intents.rs  data_mutation_store.rs  debug_export.rs  delete_change_feed.rs  error.rs  fdb.rs  fdb_append_commits.rs  fdb_append_commits_tests.rs  fdb_async.rs  fdb_async_cleanup.rs  fdb_async_read.rs  fdb_cleanup.rs  fdb_compaction.rs  fdb_compaction_tests.rs  fdb_data_mutation_staging.rs  fdb_data_mutations.rs  fdb_data_mutations_tests.rs  fdb_inline_flushes.rs  fdb_inline_tables.rs  fdb_inline_tables_tests.rs  fdb_kv.rs  fdb_macros.rs  fdb_runtime.rs  fdb_runtime_tests.rs  fdb_schemas.rs  fdb_table_drop.rs  (+112 more)
crates/ducklake-catalog/tests/: catalog_cache_isolation_tests.rs  catalog_evolution_cleanup_tests.rs  catalog_inventory_tests.rs  catalog_key_order_tests.rs  catalog_snapshot_table_tests.rs  conflict_retry_tests.rs  data_file_change_feed_tests.rs  fdb_inline_storage_contracts.rs  fdb_live_tests.rs  inline_storage_tests.rs  partition_metadata_tests.rs  sorted_table_failure_contracts.rs  upstream_add_files_mirrors.rs  upstream_alter_mirrors.rs  upstream_audit_geo_mirrors.rs  upstream_catalog_checkpoint_mirrors.rs  upstream_compaction_mirrors.rs  upstream_defaults_constraints_mirrors.rs  upstream_delete_mirrors.rs  upstream_deletion_inlining_mirrors.rs  upstream_failure_contracts.rs  upstream_partitioning_mirrors.rs  upstream_rewrite_retry_rowid_mirrors.rs  upstream_snapshots_issues_mirrors.rs  upstream_stats_transactions_views_mirrors.rs
crates/ducklake-fdb-sim-workload/: Cargo.toml
crates/ducklake-fdb-sim-workload/simulation/: catalog_smoke.toml
crates/ducklake-fdb-sim-workload/src/: catalog_cleanup.rs  (+8 more)
(+97 files in other folders)
