[workspace]
members = [
    "crates/ducklake-catalog",
    "crates/ducklake-fdb-sim-model",
    "crates/ducklake-fdb-sim-runner",
    "crates/ducklake-fdb-sim-workload",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false
rust-version = "1.96.0"

[workspace.dependencies]
foundationdb = { version = "0.11.0", default-features = false, features = ["embedded-fdb-include", "fdb-7_4"] }
foundationdb-simulation = { version = "0.3.0", default-features = false, features = ["embedded-fdb-include", "fdb-7_4", "cpp-abi"] }
futures = "0.3.31"
tempfile = "3.27.0"
