[package]
name = "ducklake-fdb-sim-workload"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "ducklake_fdb_sim_workload"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ducklake-catalog = { path = "../ducklake-catalog", default-features = false, features = ["foundationdb"] }
ducklake-fdb-sim-model = { path = "../ducklake-fdb-sim-model" }
foundationdb = { workspace = true }
foundationdb-simulation = { workspace = true }
